--- a/AUTOMERCOL/Venetian_Taller.html
+++ b/AUTOMERCOL/Venetian_Taller.html
@@ -2186,20 +2186,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
 }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 290px; height: 68px;
-        -ms-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 314px; height: 68px;
+        -ms-transform: translate(0, 0) translate(3px, 325px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(3px, 325px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(3px, 325px) rotate(0deg);
+        transform: translate(0, 0) translate(3px, 325px) rotate(0deg);
+}
+/*#/#*//*#i107.text.css:text/base/css*/
+#i107 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i107.i108.positioning.css:positioning/base/css.2*/
+#i107 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 290px; height: 68px;
+        -ms-transform: translate(0, 0) translate(16px, 289px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 289px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 289px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 289px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 311px; height: 36px;
-        -ms-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 254px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 254px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 254px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 254px) rotate(0deg);
 }
 /*#/#*//*#i105.i106.positioning.css:positioning/base/css.2*/
 #i105 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
@@ -2267,7 +2276,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 11px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i105.image.css:image/base/css*/
 #i105 { opacity: 1; }
 /*#/#*//*#i81.shape.css:shape/base/css*/
@@ -2285,10 +2294,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i79.i80.positioning.css:positioning/base/css.2*/
 #i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 71.25%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
 #i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 28.75%;
@@ -2351,7 +2360,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i95.image.html:image/html-->
 <img id="i95" src="https://i.imgur.com/OKQmjNX.gif"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">#Automercol le brinda servicio autorizado en el taller Mercedes-Benz de mayor experiencia y tradición del país.</div>
+<div id="i68">25% de descuento en mantenimiento, entre el 1 y 15 de Julio.</div>
+<!--#/#--><!--#i107.text.html:text/html-->
+<div id="i107">#Automercol le brinda servicio autorizado en el taller de mayor experiencia.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">Aunque su Mercedes-Benz no haya sido comprado en nuestro concesionario.</div>
 <!--#/#--><!--#i105.image.html:image/html-->
@@ -2553,6 +2564,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i107.i108.positioning.js:positioning/base/js.2*/
+bmShow('i107');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2605,8 +2618,12 @@ customName: 1;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: #Automercol le brinda servicio autorizado en el taller Mercedes-Benz de mayor experiencia y tradición del país.; customName: false;
+name: 25% de descuento en mantenimiento, entre el 1 y 15 de Julio.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i107.text.meta:text/meta*/
+name: #Automercol le brinda servicio autorizado en el taller de mayor experiencia.; customName: false;
+/*#/#*//*#i107.i108.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
 name: Aunque su Mercedes-Benz no haya sido comprado en nuestro concesionario.; customName: false;
