--- a/Falabella3/Venetian320x480_02.html
+++ b/Falabella3/Venetian320x480_02.html
@@ -2171,15 +2171,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i42.image.css:image/base/css*/
 #i42 { opacity: 1; }
-/*#/#*//*#i44.image.css:image/base/css*/
-#i44 { opacity: 1; }
-/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 148px; height: 89px;
-        -ms-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-        transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-}
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 40px;
         -ms-transform: translate(0, 0) translate(251px, 335px) rotate(0deg);
@@ -2254,6 +2245,35 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
+/*#/#*//*#i68.image.css:image/base/css*/
+#i68 { opacity: 1; }
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i54.shape.css:shape/base/css*/
+#i54 { background-color: #ffffff; opacity: 0.00;
+}
+/*#/#*//*#i54.i55.positioning.css:positioning/base/css.2*/
+#i54 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 80%;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+}
+/*#/#*//*#i58.shape.css:shape/base/css*/
+#i58 { background-color: #ffffff; opacity: 0.00;
+}
+/*#/#*//*#i58.i59.positioning.css:positioning/base/css.2*/
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 19.791666666666668%;
+        -ms-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+}
 /*#/#*//*#i48.image.css:image/base/css*/
 #i48 { opacity: 1; }
 /*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
@@ -2281,37 +2301,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 350px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 350px) rotate(0deg);
 }
-/*#/#*//*#i26.button.css:button/base/css*/
-#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(79,76,76,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
-#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-}
-/*#/#*//*#i54.shape.css:shape/base/css*/
-#i54 { background-color: #ffffff; opacity: 0.00;
-}
-/*#/#*//*#i54.i55.positioning.css:positioning/base/css.2*/
-#i54 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 80%;
-        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-}
-/*#/#*//*#i58.shape.css:shape/base/css*/
-#i58 { background-color: #ffffff; opacity: 0.00;
-}
-/*#/#*//*#i58.i59.positioning.css:positioning/base/css.2*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 19.791666666666668%;
-        -ms-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2325,31 +2314,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/XYOCiNn.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/ociDmIM.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/QEOH5MG.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/Qyq6H53.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/SLpjyra.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/5lxBWEq.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
 <img id="i42" src="https://i.imgur.com/LzWZPDl.jpg"/>
-<!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
+<!--#/#--><!--#i68.image.html:image/html-->
+<img id="i68" src="https://i.imgur.com/kZThkuS.png"/>
+<!--#/#--><!--#i54.shape.html:shape/html-->
+<div id="i54"></div>
+<!--#/#--><!--#i58.shape.html:shape/html-->
+<div id="i58"></div>
 <!--#/#--><!--#i48.image.html:image/html-->
 <img id="i48" src="https://i.imgur.com/qoOjY4L.png"/>
 <!--#/#--><!--#i50.image.html:image/html-->
 <img id="i50" src="https://i.imgur.com/RM74AKi.png"/>
 <!--#/#--><!--#i52.image.html:image/html-->
 <img id="i52" src="https://i.imgur.com/3WrUEnv.png"/>
-<!--#/#--><!--#i26.button.html:button/html-->
-<button id="i26"></button>
-<!--#/#--><!--#i54.shape.html:shape/html-->
-<div id="i54"></div>
-<!--#/#--><!--#i58.shape.html:shape/html-->
-<div id="i58"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2373,7 +2360,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: '#006496',
+        shadow: 'rgba(67,173,17,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2412,35 +2399,21 @@ var el = document.getElementById('i42');
 
 el.addEventListener('click', function(e){
     /*#i46.i47.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/1jrypXTxtcDmPNJw6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i44.image.js:image/base/js*/
-
-/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
-bmShow('i44');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
-/*#/#*//*#i48.image.js:image/base/js*/
+/*#/#*//*#i68.image.js:image/base/js*/
 
-/*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
-bmShow('i48');
-/*#/#*//*#i50.image.js:image/base/js*/
-
-/*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
-bmShow('i50');
-/*#/#*//*#i52.image.js:image/base/js*/
-
-/*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
-bmShow('i52');
-/*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
-bmShow('i26');
+/*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
+bmShow('i68');
 /*#/#*//*#i54.i55.positioning.js:positioning/base/js.2*/
 bmShow('i54');
 /*#/#*//*#i54.i56.actions.js:actions/base/js.1*/
@@ -2465,6 +2438,57 @@ var el = document.getElementById('i58');
 el.addEventListener('click', function(e){
     /*#i60.i61.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/1jrypXTxtcDmPNJw6'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i48.image.js:image/base/js*/
+
+/*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
+bmShow('i48');
+/*#/#*//*#i48.i62.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i48');
+
+el.addEventListener('click', function(e){
+    /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i50.image.js:image/base/js*/
+
+/*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
+bmShow('i50');
+/*#/#*//*#i50.i64.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i50');
+
+el.addEventListener('click', function(e){
+    /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i52.image.js:image/base/js*/
+
+/*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
+bmShow('i52');
+/*#/#*//*#i52.i66.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i52');
+
+el.addEventListener('click', function(e){
+    /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2500,54 +2524,49 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: XYOCiNn.jpg; fileId: ; sourceTypeId: externalUrl;
+name: ociDmIM.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: QEOH5MG.jpg; fileId: ; sourceTypeId: externalUrl;
+name: Qyq6H53.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: SLpjyra.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 5lxBWEq.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
-name: LzWZPDl.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i44.image.meta:image/meta*/
-name: CGzIxHl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: M6QtrYS.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i48.image.meta:image/meta*/
-name: qoOjY4L.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i68.image.meta:image/meta*/
+name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i50.image.meta:image/meta*/
-name: RM74AKi.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i52.image.meta:image/meta*/
-name: 3WrUEnv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i26.button.meta:button/meta*/
-name: ;
-customName: false;
-/*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i54.shape.meta:shape/meta*/
-name: Shape 2;
+name: LINK;
 /*#/#*//*#i54.i55.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i58.shape.meta:shape/meta*/
-name: Shape 2 copy;
+name: LINK MAPA;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i48.image.meta:image/meta*/
+name: F; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i50.image.meta:image/meta*/
+name: W; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i52.image.meta:image/meta*/
+name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
