--- a/ConfortAuto GLP/fade-small.html
+++ b/ConfortAuto GLP/fade-small.html
@@ -285,7 +285,7 @@
             </span>
             <br> 
             <span class="bzm_text_light bzm_text_small" style="color:#000;line-height:.2;font-size:12px;text-align:center;"> 
-            Ahorra hasta un 40% respecto a la gasolina transformando tu coche a Autogás en Confortauto</span></div>
+            Ahorra hasta un 40% respecto a la gasolina transformando tu coche a Autogás en Confortauto.</span></div>
             
             <div style="bottom:0px;height:45px;text-align:right ;margin-top:-5px; margin-right: 5px;"> <img src="https://i.imgur.com/I2RnxnJ.png" style="height:30px;margin-top:9px;">
                
