--- a/Falabella3/Cube_02.html
+++ b/Falabella3/Cube_02.html
@@ -820,11 +820,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i466.image.css:image/base/css*/
 #i466 { opacity: 1; }
 /*#/#*//*#i466.i467.positioning.css:positioning/base/css.2*/
-#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 88px;
-        -ms-transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
-        transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
+#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 34px;
+        -ms-transform: translate(0, 0) translate(87px, 101px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(87px, 101px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(87px, 101px) rotate(0deg);
+        transform: translate(0, 0) translate(87px, 101px) rotate(0deg);
 }
 /*#/#*//*#i6.i406.image.css:image/base/css*/
 #i406 { opacity: 1; }
@@ -951,7 +951,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/bBsnp8P.jpg"/>
 <!--#/#--><!--#i6.i466.image.html:image/html-->
-<img id="i466" src="https://i.imgur.com/CGzIxHl.png"/>
+<img id="i466" src="https://i.imgur.com/skFirJ1.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/Dcokx8V.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -1052,7 +1052,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1129,7 +1129,7 @@ var el = document.getElementById('i420');
 
 el.addEventListener('click', function(e){
     /*#i422.i423.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1208,7 +1208,7 @@ var el = document.getElementById('i444');
 
 el.addEventListener('click', function(e){
     /*#i446.i447.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
