--- a/Falabella3/Venetian320x480_01.html
+++ b/Falabella3/Venetian320x480_01.html
@@ -2171,15 +2171,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i42.image.css:image/base/css*/
 #i42 { opacity: 1; }
-/*#/#*//*#i44.image.css:image/base/css*/
-#i44 { opacity: 1; }
-/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 148px; height: 89px;
-        -ms-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-        transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
-}
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 40px;
         -ms-transform: translate(0, 0) translate(251px, 335px) rotate(0deg);
@@ -2252,6 +2243,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
 }
+/*#/#*//*#i70.image.css:image/base/css*/
+#i70 { opacity: 1; }
+/*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
+#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 138px; height: 36px;
+        -ms-transform: translate(0, 0) translate(97px, 414px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(97px, 414px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(97px, 414px) rotate(0deg);
+        transform: translate(0, 0) translate(97px, 414px) rotate(0deg);
+}
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i68.image.css:image/base/css*/
@@ -2323,17 +2323,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/6Tz4Ctn.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/ociDmIM.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/HOVec8k.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/Qyq6H53.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/WperAXg.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/5lxBWEq.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
 <img id="i42" src="https://i.imgur.com/LzWZPDl.jpg"/>
-<!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/CGzIxHl.png"/>
+<!--#/#--><!--#i70.image.html:image/html-->
+<img id="i70" src="https://i.imgur.com/skFirJ1.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
@@ -2410,17 +2410,17 @@ var el = document.getElementById('i42');
 
 el.addEventListener('click', function(e){
     /*#i46.i47.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/1jrypXTxtcDmPNJw6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i44.image.js:image/base/js*/
+/*#/#*//*#i70.image.js:image/base/js*/
 
-/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
-bmShow('i44');
+/*#/#*//*#i70.i71.positioning.js:positioning/base/js.2*/
+bmShow('i70');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2486,7 +2486,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2539,11 +2539,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 6Tz4Ctn.jpg; fileId: ; sourceTypeId: externalUrl;
+name: ociDmIM.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: HOVec8k.jpg; fileId: ; sourceTypeId: externalUrl;
+name: Qyq6H53.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: WperAXg.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 5lxBWEq.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
@@ -2551,10 +2551,10 @@ name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i44.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i70.image.meta:image/meta*/
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i70.i71.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
