--- a/Falabella3/Cube_02.html
+++ b/Falabella3/Cube_02.html
@@ -911,7 +911,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i414.text.html:text/html-->
 <div id="i414">¡ES HORA DE VIAJAR!</div>
 <!--#/#--><!--#i4.i458.text.html:text/html-->
-<div id="i458">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
+<div id="i458">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -927,7 +927,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i432.text.html:text/html-->
-<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
+<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
