--- a/Falabella3/Venetian320x480_01.html
+++ b/Falabella3/Venetian320x480_01.html
@@ -2310,7 +2310,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¡ES HORA DE VIAJAR!</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
+<div id="i12">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2397,11 +2397,7 @@ bmShow('i42');
 /* Name: On Click; */
 var el = document.getElementById('i42');
 
-el.addEventListener('click', function(e){
-    /*#i46.i47.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
