--- a/Grupo Alsea/Venetian_Itallianis.html
+++ b/Grupo Alsea/Venetian_Itallianis.html
@@ -2229,10 +2229,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
 #i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 40px;
-        -ms-transform: translate(0, 0) translate(140px, 402px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(140px, 402px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(140px, 402px) rotate(0deg);
-        transform: translate(0, 0) translate(140px, 402px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(139px, 391px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(139px, 391px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(139px, 391px) rotate(0deg);
+        transform: translate(0, 0) translate(139px, 391px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
@@ -2307,7 +2307,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/T3UIyot.jpg"/>
+<img id="i74" src="https://i.imgur.com/uL9aRJ5.jpg"/>
 <!--#/#--><!--#i89.image.html:image/html-->
 <img id="i89" src="https://i.imgur.com/cMAA6g0.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2417,7 +2417,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.google.com/maps/place/Alsea/@19.361001,-99.1916694,17z/data=!4m5!3m4!1s0x85d1ff4748e4c885:0xab2475ae3b589c7d!8m2!3d19.3610936!4d-99.1897464'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Wb6e7PBAnkpHxbxYA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2447,7 +2447,7 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.google.com/maps/place/Alsea/@19.361001,-99.1916694,17z/data=!4m5!3m4!1s0x85d1ff4748e4c885:0xab2475ae3b589c7d!8m2!3d19.3610936!4d-99.1897464'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Wb6e7PBAnkpHxbxYA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
